--- a/cloudbuild/simple-anthos-build/Dockerfile
+++ b/cloudbuild/simple-anthos-build/Dockerfile
@@ -1,4 +1,16 @@
-FROM gcr.io/cloud-builders/gcloud as builder
+# Copyright 2020 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.FROM gcr.io/cloud-builders/gcloud as builder
 
 ARG TERRAFORM_VERSION
 ARG TERRAFORM_VERSION_SHA256SUM
@@ -47,6 +59,8 @@ COPY --from=builder /builder/terragrunt/terraform ./
 COPY --from=builder /builder/terragrunt/terragrunt_linux_amd64 ./terragrunt
 
 COPY entrypoint.bash /builder/entrypoint.bash
+COPY bettergrunt_apply.sh /builder/bettergrunt_apply.sh
+COPY bettergrunt_plan.sh /builder/bettergrunt_plan.sh
 
 RUN chmod +x ./jq
 RUN chmod +x kpt
