--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,75 +1,40 @@
 steps:
 - id: 'branch name'
-  name: 'alpine'
+  name: 'gcr.io/${PROJECT_ID}/simple-anthos-build:latest'
   entrypoint: 'sh'  
   args: 
   - '-c'
   - | 
       echo "***********************"
-      echo "$BRANCH_NAME"
+      terraform --version
+      terragrunt --version
       echo "***********************"
-- id: 'tf validate'
+- id: 'tf validate gcp'
   name: 'gcr.io/${PROJECT_ID}/simple-anthos-build:latest'
-  entrypoint: 'sh'
+  entrypoint: 'bash'
   args: 
   - '-c'
   - |
       if [ -d "environments/$BRANCH_NAME/" ]; then
-        cd environments/$BRANCH_NAME
-        /builders/bettergrunt_init.sh
+        cd environments/$BRANCH_NAME/gcp
+        echo "*************** TERRAFORM INIT ******************"
+        echo "******* At Branch/Env: $BRANCH_NAME ********"
+        echo "*************************************************"
+        /builder/bettergrunt_init.sh
       else
         for dir in environments/*/
         do 
-          cd ${dir}   
+          cd ${dir}
           env=${dir%*/}
           env=${env#*/}
           echo ""
           echo "*************** TERRAFORM INIT ******************"
           echo "******* At environment: ${env} ********"
           echo "*************************************************"
-          /builders/bettergrunt_init.sh || exit 1
+          cd gcp
+          /builder/bettergrunt_init.sh || exit 1
           cd ../../
         done
-      fi 
-# [START tf-plan]
-- id: 'tf plan'
-  name: 'gcr.io/${PROJECT_ID}/simple-anthos-build:latest'
-  entrypoint: 'sh'
-  args: 
-  - '-c'
-  - | 
-      if [ -d "environments/$BRANCH_NAME/" ]; then
-        cd environments/$BRANCH_NAME
-        /builders/bettergrunt_plan.sh planfile
-      else
-        for dir in environments/*/
-        do 
-          cd ${dir}   
-          env=${dir%*/}
-          env=${env#*/}  
-          echo ""
-          echo "*************** TERRAFOM PLAN ******************"
-          echo "******* At environment: ${env} ********"
-          echo "*************************************************"
-          /builders/bettergrunt_plan.sh planfile || exit 1
-          cd ../../
-        done
-      fi 
-# [END tf-plan]
-
-# [START tf-apply]
-- id: 'tf apply'
-  name: 'gcr.io/${PROJECT_ID}/simple-anthos-build:latest'
-  entrypoint: 'sh'
-  args: 
-  - '-c'
-  - | 
-      if [ -d "environments/$BRANCH_NAME/" ]; then
-        cd environments/$BRANCH_NAME      
-         /builders/bettergrunt_apply.sh
-      else
-        echo "***************************** SKIPPING APPLYING *******************************"
-        echo "Branch '$BRANCH_NAME' does not represent an official environment."
-        echo "*******************************************************************************"
-      fi
-# [END tf-apply]  
+      fi   
+  env:
+      - "PROJECT_ID=${PROJECT_ID}" 
